# training_assistant

./: Cargo.toml
.github/workflows/: ci.yml
billing/: Cargo.toml
billing/src/: invoice_template.tex  lib.rs
cli/: Cargo.toml  out.aux  out.tex
cli/src/: main.rs
client_app/: Cargo.toml
client_app/assets/: main.cob  main.cobweb
client_app/src/: main.rs
crates/billing/: Cargo.toml
crates/billing/src/: invoice_template.tex  lib.rs
crates/billing/src/snapshots/: billing__test__invoice_generate_test.snap
crates/db_commands/: Cargo.toml
crates/db_commands/src/: lib.rs
crates/documents/src/: lib.rs
crates/dolmen/: Cargo.toml
crates/dolmen/src/: context.rs  lib.rs
crates/framework/: Cargo.toml
crates/framework/src/: context.rs  db.rs  lib.rs
crates/framework_derive_macros/: Cargo.toml
crates/framework_derive_macros/src/: lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/tacl/: Cargo.toml
crates/tacl/src/: main.rs
crates/tagui/: Cargo.toml
crates/tagui/src/: main.rs
crates/training/: Cargo.toml
crates/training/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/tui/src/snapshots/: tui__test__tui_test_1-2.snap  tui__test__tui_test_1.snap
db/: Cargo.toml
db/src/: lib.rs
db_commands/: Cargo.toml
db_commands/src/: lib.rs
deprecated/client_app/: Cargo.toml
deprecated/client_app/src/: main.rs
deprecated/db/: Cargo.toml
deprecated/db/src/: lib.rs
deprecated/tagui/: Cargo.toml
deprecated/tagui/src/: main.rs
documents/: Cargo.toml
documents/src/: lib.rs
exercise_db/: Cargo.toml
exercise_db/src/: lib.rs
framework/: Cargo.toml
framework/src/: context.rs  db.rs  lib.rs
framework_derive_macros/: Cargo.toml
framework_derive_macros/src/: lib.rs
handoutgen/: Cargo.toml
handoutgen/src/: handout.sty  lib.rs  main.rs
invoice/: Cargo.toml
invoice/src/: invoice_template.tex  lib.rs
tacl/: Cargo.toml
tacl/src/: main.rs
tagui/: Cargo.toml
tagui/assets/: icon-256.png~
tagui/src/: main.rs
tests/: db_commands.rs
training/: Cargo.toml
training/src/: lib.rs
tui/: Cargo.toml
tui/src/: lib.rs
