[workspace]
resolver = "3"
members = [ "tacl", "billing", "documents", "framework", "tagui", "framework_derive_macros", "training", "tui", "db_commands"]

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"
