[workspace]
resolver = "3"
members = [ "crates/tacl", "crates/billing", "crates/documents", "crates/framework", "crates/tagui", "crates/framework_derive_macros", "crates/training", "crates/tui", "crates/db_commands", "crates/gui"]

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"
