[workspace]
resolver = "3"
members = [ "crates/tacl", "crates/billing", "crates/documents", "crates/tagui", "crates/training", "crates/tui", "crates/db_commands", "crates/gui"]

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
missing_docs = "allow"

[workspace.lints.rustdoc]
missing_crate_level_docs = "allow"
