[package]
name = "billing"
version = "0.1.0"
edition = "2024"

[dependencies]
latex = "0.3.1"
documents = { path = "../documents" }
framework = { version = "0.1.0", path = "../framework" }
clap = "4.5.50"
rusqlite = "0.37.0"
framework_derive_macros = { version = "0.1.0", path = "../framework_derive_macros" }
