[package]
name = "tacl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["env", "derive"] }
billing = { path = "../billing", optional = true }
framework = { version = "0.1.0", path = "../framework" }
shlex = "1.3.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
training = { version = "0.1.0", path = "../training", optional = true }

[lints]
workspace = true

[features]
default = ["billing", "training"]
billing = ["dep:billing"]
training = ["dep:training"]
