[package]
name = "billing"
version = "0.1.0"
edition = "2024"

[dependencies]
latex = "0.3.1"
documents = { path = "../documents" }
reliquary = { git = "https://github.com/eupraxia05/reliquary.git" }
training = { path = "../training" }
clap = "4.5.50"
rusqlite = "0.37.0"
tabled = "0.20.0"
directories = "6.0.0"
tui = { version = "0.1.0", path = "../tui", optional = true }
ratatui = "0.29.0"
insta = "1.44.3"
gui = { version = "0.1.0", path = "../gui" }
dolmen = { version = "0.0.1", git = "https://github.com/eupraxia05/dolmen.git" }
chrono = "0.4.43"

[lints]
workspace = true

[features]
default = ["tui"]
tui = ["dep:tui"]
