[package]
name = "db_commands"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.53"
crossterm = "0.29.0"
dolmen = { version = "0.0.1", git = "https://github.com/eupraxia05/dolmen.git" }
reliquary = { git = "https://github.com/eupraxia05/reliquary.git", rev = "9c4c051" }
gui = { version = "0.1.0", path = "../gui" }
ratatui = "0.29.0"
tabled = "0.20.0"
tui = { path = "../tui" }
tui-textarea = { version = "0.7.0", features = ["crossterm"] }

[lints]
workspace = true
