[package]
name = "tagui"
version = "0.1.0"
edition = "2024"

[dependencies]
billing = { version = "0.1.0", path = "../billing" }
db_commands = { version = "0.1.0", path = "../db_commands" }
dolmen = { version = "0.0.1", git = "https://github.com/eupraxia05/dolmen.git" }
eframe = "0.33.0"
egui = "0.33.0"
gui = { version = "0.1.0", path = "../gui" }
reliquary = { git = "https://github.com/eupraxia05/reliquary.git" }

[lints]
workspace = true
