[package]
name = "training"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
framework = { version = "0.1.0", path = "../framework" }
framework_derive_macros = { version = "0.1.0", path = "../framework_derive_macros" }
ratatui = "0.29.0"
rusqlite = "0.37.0"
tabled = "0.20.0"
tui = { version = "0.1.0", path = "../tui" }

[lints]
workspace = true
