[package]
name = "training"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dolmen = { version = "0.0.1", git = "https://github.com/eupraxia05/dolmen.git" }
reliquary = { git = "https://github.com/eupraxia05/reliquary.git", rev = "9c4c051"  }
ratatui = "0.29.0"
rusqlite = "0.37.0"
tabled = "0.20.0"
tui = { version = "0.1.0", path = "../tui" }

[lints]
workspace = true
